# eng

./: .clangd  .gitignore  build.sh  debug.sh  meson.build  run.sh
.cache/clangd/index/: BinaryBuffer.cpp.A2D5B32796A7395E.idx  BinaryBuffer.hpp.6450AFBBE2B9E753.idx  Config.cpp.A2933CDFF44DA7EE.idx  Config.hpp.6FDD339BF8FD6590.idx  Engine.cpp.92405EA34D9D607C.idx  Engine.hpp.E812B5368C255BA9.idx  EngineMetadata.cpp.B1C6F73CD5F2C776.idx  EngineMetadata.hpp.C3A2D89342179C53.idx  Game.cpp.08F0512E9F772876.idx  Game.hpp.E5193F0C533288C1.idx  LuaSource.cpp.7437B911C39BD650.idx  LuaSource.hpp.31FCFBA1260477E4.idx  Main.cpp.5ECB02B051EABC91.idx  Panic.cpp.3E08B147D3B6122F.idx  Panic.hpp.9DB879C4AB5C4D17.idx  Platform.cpp.461D7F08F8E72ADC.idx  Platform.hpp.67921D5B3A994B74.idx  RenderingEngine.cpp.9D60E56DCCCC7351.idx  RenderingEngine.hpp.3C9DF40027250D63.idx  Result.cpp.F69589982686B5B3.idx  Result.hpp.8E8E1504B1D74DAD.idx  Scene.cpp.9166DBE1FDED647C.idx  Scene.hpp.5705E9416FCE0F95.idx  ScriptEngine.cpp.B1B7A97461A1BF80.idx  ScriptEngine.hpp.2744816D1B0E1FE5.idx  ShutdownTrigger.cpp.5D63E12D998C81BA.idx  ShutdownTrigger.hpp.BD92C2861B256C35.idx  State.hpp.2284881C253BCBAA.idx  Util.cpp.CA1F16C519340DE3.idx  Util.hpp.D565344F998EEA91.idx  Vector2.cpp.759520DCF5FB0607.idx  Vector2.hpp.40A1FB0D431AB489.idx  abort.hpp.827109206B6306E5.idx  as_args.hpp.0C4AB450DB47DB82.idx  as_returns.hpp.61DF4002A605067C.idx  assert.hpp.F153B6D11537436D.idx  base_traits.hpp.CA928DDDF4F0169B.idx  bind_traits.hpp.EC45797A6F74BDD6.idx  build_version.hpp.EE3A28971BA1325D.idx  bytecode.hpp.9AB7380683778649.idx  (+103 more)
DuckEngine/lib/lua/: assert.lua  bindings.lua  mouse.lua
src/: .null-ls_814785_Main.cpp  .null-ls_814785_Synchronyzed.hpp  BinaryBuffer.cpp  BinaryBuffer.hpp  Config.hpp  Constants.hpp  Engine.cpp  Engine.hpp  EngineMetadata.cpp  EngineMetadata.hpp  EventEngine.cpp  EventEngine.hpp  Game.cpp  Game.hpp  LuaInterop.cpp  LuaInterop.hpp  Main.cpp  Main.hpp  Panic.cpp  Panic.hpp  Platform.hpp  Policies.cpp  Policies.hpp  RenderingEngine.cpp  RenderingEngine.hpp  Result.cpp  Result.hpp  Scene.hpp  ScriptEngine.cpp  ScriptEngine.hpp  State.hpp  Synchronized.cpp  Synchronyzed.hpp  Task.hpp  Util.cpp  Util.hpp  Vector2.cpp  Vector2.hpp  meson.build
