sources = [
  'BinaryBuffer.cpp',
  'Config.cpp',
  'Constants.cpp',
  'Engine.cpp',
  'EngineMetadata.cpp',
  'Game.cpp',
  'Main.cpp',
  'Panic.cpp',
  'Platform.cpp',
  'RenderingEngine.cpp',
  'Result.cpp',
  'Scene.cpp',
  'ScriptEngine.cpp',
  'Util.cpp',
  'Vector2.cpp',
]

executable('eng', sources, dependencies: deps, include_directories: inc_dirs)

